# wafpass-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TECH.md  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 0001_create_runs.py  0002_add_run_metadata.py  0003_add_controls_meta.py  0004_add_plan_changes.py  0005_add_controls.py  0006_add_secret_findings.py  0007_add_waivers_risks.py  0008_add_stage_to_runs.py  0010_add_api_keys.py  0011_add_api_key_usage_logs.py  0012_add_user_audit_logs.py  0013_add_sso_config.py  0014_add_group_role_mappings.py  0015_add_evidence.py  0016_add_project_passports.py  0017_add_passport_image_url.py  0018_add_achievements.py  0019_add_compliance_audit_events.py  0020_add_runs_cursor_index.py  0021_add_refresh_token_family.py  0022_typed_expiry_dates.py  0023_run_findings_table.py  0024_add_user_prefs.py  0025_add_control_packs.py  0026_add_control_regulatory_mapping.py  0027_add_run_findings_regulatory_mapping.py  0028_add_findings_comments.py  0029_add_user_image_url.py  0030_add_secret_findings_comments.py  0031_populate_run_secret_findings.py
tests/: test_runs.py
wafpass_server/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  secret_enc.py
wafpass_server/auth/: __init__.py  deps.py  jwt_utils.py
wafpass_server/auth/providers/: base.py  local.py
wafpass_server/routers/: achievements.py  auth.py  badges.py  compliance_audit.py  control_packs.py  controls.py  evidence.py  findings_comments.py  leaderboard.py  projects.py  risks.py  runs.py  sandbox.py  scan.py  secret_findings_comments.py  sso.py  waivers.py
