[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wafpass-server"
version = "0.3.0"
description = "WAF++ PASS – API server for persisting and querying scan results"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "pytest-cov>=4.0",
]

[project.scripts]
wafpass-server = "wafpass_server.main:start"

[tool.hatch.build.targets.wheel]
packages = ["wafpass_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
